cleared out the scaffolded views and added a single index view for savings goal

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using FinGoals_DotNet
-@using FinGoals_DotNet.Models
+﻿@using FinGoals
+@using FinGoals.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
